welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: value update is not a member of java.awt.Color
    if (getCouleurSol()=Color.green){
        ^SlugTracking:5: error: type mismatch;
 found   : Unit
 required: Boolean
    avance();
          ^SlugTracking:8: error: value update is not a member of java.awt.Color
          if (getCouleurSol()=Color.green){
              ^SlugTracking:9: error: type mismatch;
 found   : Unit
 required: Boolean
          avance();
                ^SlugTracking:11: error: type mismatch;
 found   : Unit
 required: Boolean
          else {droite(); droite(); avance();
                                          ^