welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    // Write your code here
    if (getCouleurSol()=Color.green){
    avance();
    }
    else {gauche();
          if (getCouleurSol()=Color.green){
          avance();
          }
          else {droite(); droite(); avance();
          }
    }
    
}        
